<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-speech-sandbox</artifactId>
  <version>0.0.2</version>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <argLine>
            --add-opens java.base/java.lang=ALL-UNNAMED
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
          </argLine>
          <includes>
            <include>**/*</include>
          </includes>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>chatgpt-java</id>
      <url>https://raw.github.com/AcaiSoftware/chatgpt-java/repository/</url>
    </repository>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/umjammer/*</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.14</version>
    </dependency>

    <dependency> <!-- cahtgpt -->
      <groupId>io.github.barqawiz</groupId>
      <artifactId>intellijava.core</artifactId>
      <version>0.8.2</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.11.0</version>
    </dependency>

    <dependency>
      <groupId>gg.acai</groupId>
      <artifactId>chatgpt-java</artifactId>
      <version>1.0.2</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-speech2</artifactId>
      <version>0.0.20</version>
      <exclusions>
        <exclusion>
          <groupId>com.github.umjammer</groupId>
          <artifactId>javax-speech</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.github.umjammer.FreeTTS</groupId>
          <artifactId>freetts-jsapi10</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency> <!-- markdown -->
      <groupId>com.vladsch.flexmark</groupId>
      <artifactId>flexmark-all</artifactId>
      <version>0.64.8</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer.vavi-net-auth</groupId> <!-- vavi / com.github.umjammer.vavi-net-auth -->
      <artifactId>vavi-net-auth-common</artifactId>
      <version>0.1.13</version>
    </dependency>

    <dependency>
      <groupId>org.eclipse.jetty.websocket</groupId>
      <artifactId>javax-websocket-client-impl</artifactId>
      <version>9.4.57.v20241219</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- org.klab / com.github.umjammer -->
      <artifactId>klab-commons-cli</artifactId>
      <version>1.3.3</version>
    </dependency>

    <dependency> <!-- html → text -->
      <groupId>ch.x28.inscriptis</groupId>
      <artifactId>inscriptis</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency> <!-- repl -->
      <groupId>org.jline</groupId>
      <artifactId>jline</artifactId>
      <version>3.26.2</version>
    </dependency>

    <dependency> <!-- ollama -->
      <groupId>io.github.ollama4j</groupId>
      <artifactId>ollama4j</artifactId>
      <version>1.0.84</version>
      <exclusions>
        <exclusion>
          <artifactId>slf4j-api</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.16</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>classpath</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>1.6</version> <!-- must be 1.6 -->
            <executions>
              <execution>
                <phase>validate</phase>
                <configuration>
                  <target>
                    <echoproperties prefix="maven.dependency" />
                  </target>
                </configuration>
                <goals>
                  <goal>run</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
